src/objects/Meeting_Third_Party_MERC__c.object
<CustomObject>
    <description>Junction object between Account and Meeting. Created 10/10/2013 by KLorenti</description>
    <fields>
        <fullName>Account_MERC__c</fullName>
        <description>Link to account
Created 10/10/2013 by KLorenti</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Meeting Third Parties</relationshipLabel>
        <relationshipName>Meeting_Third_Parties</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Additional_Informatin_MERC__c</fullName>
        <description>To provide additional comments. Created 10/28/2013 by KLorenti, Mavens Consulting</description>
        <label>Additional Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expenses_MERC__c</fullName>
        <description>To track expenses for Individual HCP Sponsorships. Created 10/28/2013 by KLorenti, Mavens Consulting</description>
        <label>Expenses</label>
        <picklist>
            <picklistValues>
                <fullName>Registration Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accommodation</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>HCP_Eligibility_for_Sponsorship_MERC__c</fullName>
        <description>Track if HCP is Eligible for Sponsorship. Created 10/28/2013 by KLorenti, Mavens Consulting</description>
        <label>HCP Eligibility for Sponsorship?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Material_to_be_Shipped_MERC__c</fullName>
        <description>Does material need to be shipped to the meeting? Created 10/28/2013 by KLorenti, Mavens Consulting</description>
        <inlineHelpText>Does material need to be shipped to the meeting?</inlineHelpText>
        <label>Material to be Shipped?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Meeting_MERC__c</fullName>
        <description>Link between Meeting and Product. Created 10/10/2013 by KLorenti</description>
        <label>Meeting</label>
        <referenceTo>Meeting_MERC__c</referenceTo>
        <relationshipLabel>Third Party Organizations</relationshipLabel>
        <relationshipName>Meeting_Third_Parties</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Payment_For_MERC__c</fullName>
        <description>Created 10/28/2013 by KLorenti, Mavens Consulting</description>
        <label>Payment For</label>
        <picklist>
            <picklistValues>
                <fullName>Booth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertisement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satellite Symposia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_To_MERC__c</fullName>
        <description>Payment will be made to independent meeting organizer; third party logistics vendor. Created 10/28/2013 by KLorenti, Mavens Consulting</description>
        <label>Payment To</label>
        <picklist>
            <picklistValues>
                <fullName>Independent Meeting Organizer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party Logistics Vendor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sponsorship_with_Lilly_Assist_MERC__c</fullName>
        <description>Captures rotating or cyclical sponsorship with Lilly assistance. Created 10/28/2013 by KLorenti, Mavens Consulting</description>
        <inlineHelpText>Rotating or cyclical sponsorship with Lilly assistance.</inlineHelpText>
        <label>Sponsorship with Lilly Assistance</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sponsorship_without_Lilly_Assist_MERC__c</fullName>
        <description>Capture rotating or cyclical sponsorship without Lilly assistance. Created 10/28/2013 by KLorenti, Mavens Consulting</description>
        <inlineHelpText>Rotating or cyclical sponsorship without Lilly assistance</inlineHelpText>
        <label>Sponsorship without Lilly Assistance</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Sponsorship_MERC__c</fullName>
        <description>Capture type of HCO Sponsorship. Created 10/28/2013 by KLorenti, Mavens Consulting</description>
        <label>Type of Sponsorship</label>
        <picklist>
            <picklistValues>
                <fullName>Booth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertisement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Meeting Third Party</label>
    <nameField>
        <displayFormat>TPO-{000000}</displayFormat>
        <label>Third Party #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting Third Parties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>